using UnityEngine;

public class Const
{
    // For Animator
    public static int AnimRun = Animator.StringToHash("Run");
    public static int AnimJump = Animator.StringToHash("Jump");
    public static int AnimVelocityY = Animator.StringToHash("VelocityY");
    public static int AnimGround = Animator.StringToHash("Ground");
    public static int AnimHurt = Animator.StringToHash("Hurt");
    public static int AnimDead = Animator.StringToHash("Dead");
    public static int AnimDash = Animator.StringToHash("Dash");


    // For Others
    public static string Run = "Run";
    public static string Jump = "Jump";
    public static string Dash = "Dash";

}